--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
@@ -13,5 +14,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.43.4"
+  },
+  "devDependencies": {
+    "eslint": "8.4.1",
+    "eslint-config-next": "12.0.7"
   }
 }
