--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "sass": "^1.43.4"
   },
   "devDependencies": {
-    "eslint": "8.4.1",
+    "eslint": "^8.4.1",
     "eslint-config-next": "12.0.7"
   }
 }
