--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-lottie": "^1.2.3",
     "sass": "^1.43.4"
   },
   "devDependencies": {
