--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "framer-motion": "^6.2.1",
+    "lottie-web": "^5.8.1",
     "next": "^11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.33.1",
     "react-lottie": "^1.2.3",
+    "react-lottie-tools": "^1.1.5",
     "sass": "^1.43.4"
   },
   "devDependencies": {
