--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "eslint": "^8.4.1",
     "eslint-config-next": "12.0.7",
-    "eslint-plugin-react": "^7.27.1"
+    "eslint-plugin-react": "^7.27.1",
+    "webpack": "^5.67.0"
   }
 }
