--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^6.2.1",
     "lottie-web": "^5.8.1",
     "next": "^11.0.0",
+    "node-sass": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.33.1",
