--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
-    "framer-motion": "^6.2.1",
     "lottie-web": "^5.8.1",
     "next": "^11.0.0",
     "node-sass": "^7.0.1",
@@ -25,6 +24,8 @@
     "eslint": "^8.4.1",
     "eslint-config-next": "12.0.7",
     "eslint-plugin-react": "^7.27.1",
+    "framer-motion": "^6.2.1",
+    "install-peers": "^1.0.3",
     "webpack": "^5.67.0"
   }
 }
