--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "lottie-web": "^5.8.1",
     "next": "^11.0.0",
     "node-sass": "^7.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "16.13.0",
     "react-intersection-observer": "^8.33.1",
     "react-lottie": "^1.2.3",
     "react-lottie-tools": "^1.1.5",
