--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "animate.css": "^4.1.1",
+    "gsap": "^3.9.1",
     "lottie-web": "^5.8.1",
     "next": "^11.0.0",
+    "next-transpile-modules": "^9.0.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-animation-on-scroll": "^2.1.0",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.33.1",
     "react-lottie": "^1.2.3",
