--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "animate.css": "^4.1.1",
+    "axios": "^0.26.1",
     "gsap": "^3.9.1",
     "lottie-web": "^5.8.1",
     "next": "^11.0.0",
