--- a/strapi/portfolio-backend/package.json
+++ b/strapi/portfolio-backend/package.json
@@ -9,12 +9,12 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.1.3",
-    "@strapi/plugin-users-permissions": "4.1.3",
     "@strapi/plugin-i18n": "4.1.3",
-    "sqlite3": "5.0.2"
+    "@strapi/plugin-users-permissions": "4.1.3",
+    "@strapi/strapi": "4.1.3",
+    "sqlite3": "5.0.2",
+    "strapi-plugin-colorpicker": "^1.0.35"
   },
   "author": {
     "name": "A Strapi developer"
