--- a/strapi/portfolio-backend/package.json
+++ b/strapi/portfolio-backend/package.json
@@ -10,11 +10,21 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@strapi/admin": "^4.1.8",
+    "@strapi/design-system": "^1.1.0",
+    "@strapi/icons": "^1.1.0",
     "@strapi/plugin-i18n": "4.1.3",
-    "@strapi/plugin-users-permissions": "4.1.3",
-    "@strapi/strapi": "4.1.3",
+    "@strapi/strapi": "4.1.7",
+    "core-js": "^3.21.1",
+    "pg": "^8.7.3",
+    "pg-connection-string": "^2.5.0",
+    "react": "15.3.0",
+    "react-dom": "15.3.0",
+    "react-is": "^18.0.0",
+    "react-query": "^3.38.0",
     "sqlite3": "5.0.2",
-    "strapi-plugin-colorpicker": "^1.0.35"
+    "strapi-provider-upload-aws-s3": "^3.6.8",
+    "validate-peer-dependencies": "^2.0.0"
   },
   "author": {
     "name": "A Strapi developer"
@@ -23,7 +33,7 @@
     "uuid": "b69019ec-ff46-4deb-9611-65a2efedaba2"
   },
   "engines": {
-    "node": ">=12.x.x <=16.x.x",
+    "node": ">=10.x.x <=14.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
